<resources>
    <string name="app_name">Espaço D</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="events">Events</string>
    <string name="favorites">Favorites</string>
    <string name="my_events">My Events</string>
    <string name="all_events">All Events</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="no_internet_connection">No internet connection is available</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">welcomeee</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_welcome">activity welcome</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Password</string>
    <string name="user_name">Name</string>
    <string name="user_password_confirmation">Password Confirmation</string>
    <string name="register_disclaimer">Your email address will always remain private. By clicking Register you are indicating that you have read and agreed to the Terms of Service</string>
    <string name="title_activity_register">activty register</string>
    <string name="logout">Logout</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="event_detail">Event Detail</string>
    <string name="hint_event_title">Title</string>
    <string name="hint_event_description">Description</string>
    <string name="category_event">Category</string>
    <string name="event_request">Send request</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_local">Local</string>
    <string name="update_event_list">Update Event List</string>
</resources>