<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".view.EventRegisterActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="6"
        android:paddingLeft="4dp"
        android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/register_event_title"
                android:hint="@string/hint_event_title"
                android:inputType="textCapWords"
                style="@style/RegisterFieldStyle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/register_event_description"
                android:hint="@string/hint_event_description"
                android:inputType="textCapWords"
                style="@style/RegisterFieldStyle" />

            <EditText
                android:id="@+id/event_date"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:inputType="date"
                android:hint="@string/event_date"/>

            <EditText
                android:id="@+id/event_time"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:inputType="time"
                android:hint="@string/event_time"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

            <Button
                android:id="@+id/event_request"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/event_request"/>

    </LinearLayout>

</LinearLayout>